# Bot-reminded

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
data/: reminderbot.db  scheduler.db
reminderbot/: config.py
reminderbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reminderbot/app/handlers/: __init__.py  admin.py  reminders.py  settings.py  start.py
reminderbot/app/keyboards/: common.py
reminderbot/app/middlewares/: db.py  localization.py  services.py  user_locale.py
reminderbot/app/utils/: calendar.py  commands_setup.py  states.py
reminderbot/domain/: models.py
reminderbot/domain/services/: reminders.py  users.py
reminderbot/infrastructure/: container.py
reminderbot/infrastructure/db/: base.py  models.py  session.py
reminderbot/infrastructure/integrations/: calendar.py
reminderbot/infrastructure/repos/: base.py  reminders.py  reminders_log_ext.py  rules.py  users.py
reminderbot/infrastructure/scheduler/: jobs.py  service.py
reminderbot/presentation/: commands.py  localization.py  messages.py
reminderbot/presentation/locales/: en.yml  ru.yml  uk.yml
reminderbot/web/: __init__.py  main.py
tests/: test_reminder_service.py
