[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reminderbot"
version = "0.1.0"
description = "Mercurple reminder bot built with aiogram"
authors = [{name = "Mercurple Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.4",
    "APScheduler>=3.10",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.4",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "babel>=2.12",
    "python-i18n>=0.3",
    "tzdata>=2024.1",
    "httpx>=0.27",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "coverage>=7.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
